--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/rijksmuseum2"
     tools:context="com.example.anh.anhnguyen_pset6.MainActivity">
 
     <TextView
@@ -59,13 +60,24 @@
         android:id="@+id/buttonCompare"
         android:text="Compare"/>
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/googleSignIn"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Logged in as:"
+        android:id="@+id/loginText"
+        android:layout_above="@+id/loginInfo"
+        android:layout_alignParentLeft="true"/>
+
+
+    <TextView
+        android:textColor="@color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:text=""
+        android:id="@+id/loginInfo"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentLeft="true"/>
 
     <Button
         android:text="@string/signout"
@@ -74,6 +86,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/googleSignOut" />
+        android:id="@+id/SignOut" />
 
 </RelativeLayout>
