--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -1,29 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_favorite"
+    android:id="@+id/move_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.anh.anhnguyen_pset6.FavoriteActivity">
+    tools:context="com.example.anh.anhnguyen_pset6.SearchFoundActivity"
+    >
 
     <TextView
+        android:id="@+id/watchWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+
         android:textSize="30dp"
-        android:text="@string/favorites"
-        android:id="@+id/favoriteTitle"
+        android:layout_toLeftOf="@+id/clearButton"
+        android:padding="20dp"
         />
 
+    <Button
+        android:id="@+id/clearButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear"
+        android:padding="20dp"
+        android:layout_alignParentRight="true"
+        android:onClick="emptyWatchList"
+        />
     <ListView
-        android:layout_marginTop="20dp"
+        android:id="@+id/watchList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/favoriteTitle"
-        android:id="@+id/favoriteList"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/watchWelcome"
+
+        />
 
 
 </RelativeLayout>
