--- a/app/src/main/res/layout/activity_search_found.xml
+++ b/app/src/main/res/layout/activity_search_found.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_search_found"
+    android:id="@+id/activity_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,81 +11,31 @@
     android:background="@drawable/rijksmuseum3"
     tools:context="com.example.anh.anhnguyen_pset6.SearchFoundActivity">
 
-    <RelativeLayout
-        android:orientation="vertical"
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/lookedFor"
+        android:textSize="25dp"
+        android:layout_marginBottom="10dp"/>
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/searchlist"
+        android:layout_below="@+id/lookedFor"
+        >
+    </ListView>
 
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:padding="10dp"
-            android:background="#99FFFFFF"
-            android:id="@+id/frame">
-
-            <TextView
-                android:text="Results "
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/result"
-                android:textSize="25sp"
-                android:layout_marginBottom="10dp"
-               />
-
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="#99FFFFFF"
-            android:id="@+id/frame2"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-
-
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/booksfound_list"
-            android:scrollbars="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:padding="10dp"
-            android:layout_below="@+id/description"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="16dp" />
-
-        </FrameLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/description"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            android:id="@+id/description"
-            android:layout_marginLeft="13dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginBottom="18dp"
-            android:layout_alignBottom="@+id/frame"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/emptysearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No results"
+        android:layout_below="@+id/lookedFor"
+        android:textSize="20dp"
+        />
 
 
 </RelativeLayout>
