--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -14,5 +14,15 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/image"
         android:layout_toEndOf="@+id/image"
-        android:gravity="center"/>
+        />
+
+    <TextView
+        android:id="@+id/artID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/image"
+        android:layout_toEndOf="@+id/image"
+        android:layout_below="@+id/title"
+        android:gravity="center"
+        android:visibility="gone"/>
 </RelativeLayout>
