--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -4,6 +4,7 @@
     android:id="@+id/move_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/rijksmuseum4"
     tools:context="com.example.anh.anhnguyen_pset6.SearchFoundActivity"
     >
 
@@ -15,6 +16,7 @@
         android:textSize="25dp"
         android:text="@string/favorites"
         android:layout_margin="10dp"
+        android:textColor="@color/black"
         />
 
     <TextView
@@ -26,8 +28,8 @@
         android:text="@string/favoriteDescription"
         android:layout_below="@+id/Favorite"
         android:layout_marginBottom="10dp"
-
-        />
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/black"
 
         />
     <ListView
@@ -35,8 +37,51 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/FavoriteDescription"
+        android:background="#80FFFFFF"
 
         />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1.0"
+        android:layout_alignParentBottom="true"
+        android:background="#000000"
+        >
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.30"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/searchPageButton"
+            android:onClick="toHome"
+            android:text="Home"
+            />
+
+        <Button
+            android:id="@+id/searchPageButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.40"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="Search Page"
+            android:onClick="toSearchPage"
+            />
+
+        <Button
+            android:id="@+id/watchButton"
+            android:layout_toRightOf="@+id/searchPageButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.30"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="Watchlist"
+            android:onClick="toWatchList"
+            />
+    </LinearLayout>
 
 
 </RelativeLayout>
