--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/rijksmuseum3"
     tools:context="com.example.anh.anhnguyen_pset6.SearchActivity">
 
@@ -32,6 +28,47 @@
         android:id="@+id/search_button"
         android:layout_below="@+id/searchArtEdit"
         android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1.0"
+        android:layout_alignParentBottom="true"
+        android:background="#000000"
+        >
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.30"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/searchPageButton"
+            android:onClick="toHome"
+            android:text="Home"
+            />
+
+        <Button
+            android:id="@+id/searchPageButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.40"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="Search Page"
+            android:onClick="toSearchPage"
+            />
+
+        <Button
+            android:id="@+id/watchButton"
+            android:layout_toRightOf="@+id/searchPageButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.30"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="Watchlist"
+            android:onClick="toWatchList"
+            />
+    </LinearLayout>
 
 
 </RelativeLayout>
