--- a/app/src/main/res/layout/art_info.xml
+++ b/app/src/main/res/layout/art_info.xml
@@ -6,11 +6,15 @@
     android:id="@+id/move_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/rijksmuseum5"
+
     tools:context="com.example.anh.anhnguyen_pset6.SearchFoundActivity"
     >
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/addBut"
+    android:background="#1A000000">
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -21,18 +25,28 @@
         android:id="@+id/proberen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         />
 
     <TextView
-        android:id="@+id/specPlot"
-        android:layout_width="wrap_content"
+        android:id="@+id/maker"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:layout_centerHorizontal="true"
+        android:padding="5dp"
+        android:gravity="center"
         android:layout_below="@+id/title"
+        android:background="#1A000000"
         />
 
-
+    <TextView
+        android:id="@+id/year"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:padding="5dp"
+        android:gravity="center"
+        android:layout_below="@+id/maker"
+        />
 
     <TextView
         android:id="@+id/title"
@@ -48,28 +62,73 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:padding="20dp"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/maker"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_margin="10dp"/>
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/description"
+        android:layout_below="@+id/artImage"
+        android:padding="20dp"/>
 </RelativeLayout>
 </ScrollView>
 
 
-<Button
-    android:id="@+id/addBut"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text=""
-    android:padding="20dp"
-    android:onClick="addRemove"
-    android:layout_marginLeft="20dp"
-    android:layout_marginBottom="24dp"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_marginStart="20dp" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linear"
+        android:layout_alignParentBottom="true"
+        android:background="#000000"
+        >
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.30"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/searchPageButton"
+            android:onClick="toHome"
+            android:text="Home"
+            />
+
+        <Button
+            android:id="@+id/searchPageButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.40"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="Search Page"
+            android:onClick="toSearchPage"
+            />
+
+        <Button
+            android:id="@+id/watchButton"
+            android:layout_toRightOf="@+id/searchPageButton"
+            android:layout_width="0dp"
+            android:layout_weight="0.30"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="Watchlist"
+            android:onClick="toWatchList"
+            />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/addBut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:padding="20dp"
+        android:onClick="addRemove"
+        android:layout_above="@+id/linear"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
