--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,16 +24,6 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appDescription"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:id="@+id/buttonSearch"
-        android:text="search"
-        android:onClick="searchMessage"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@+id/buttonSearch"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
@@ -75,8 +65,18 @@
         android:layout_height="70dp"
         android:id="@+id/appTitle"
         android:src="@drawable/logo"
+        android:layout_marginTop="11dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp" />
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:id="@+id/buttonSearch"
+        android:text="search"
+        android:onClick="searchMessage"
+        android:layout_below="@+id/appDescription"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
